--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,5 @@
     <string name="lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit_phasellus_facilisis_eros_nulla_porttitor_scelerisque_purus_feugiat_sed">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus facilisis eros nulla, porttitor scelerisque purus feugiat sed.</string>
     <string name="profile">Profile</string>
     <string name="judul_film">Judul Film</string>
+    <string name="favorite_detail">Favorite Detail</string>
 </resources>
